--- a/yacht/yacht-1.html
+++ b/yacht/yacht-1.html
@@ -15,7 +15,7 @@
         <div class="container-logo">
             <div class="navbar">
                 <div class="logo">
-                    <a href="/index.html"><img src="/images2/logo3.png" width="180px" height="50px" alt="로고"></a>
+                    <a href="../index.html"><img src="../images2/logo3.png" width="180px" height="50px" alt="로고"></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
