--- a/yacht/yacht-1.html
+++ b/yacht/yacht-1.html
@@ -19,22 +19,22 @@
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="/allproduct/allproduct-1.html">All products</a></li>
-                        <li><a href="/real_estate/real_estate-1.html">Real Estate</a></li>
-                        <li><a href="/car/car-1.html">Cars</a></li>
-                        <li><a href="/yacht/yacht-1.html">Yachts</a></li>
-                        <li><a href="/jet/jet-1.html">Jets</a></li>
+                        <li><a href="../allproduct/allproduct-1.html">All products</a></li>
+                        <li><a href="../real_estate/real_estate-1.html">Real Estate</a></li>
+                        <li><a href="../car/car-1.html">Cars</a></li>
+                        <li><a href="../yacht/yacht-1.html">Yachts</a></li>
+                        <li><a href="../jet/jet-1.html">Jets</a></li>
                     </ul>
                 </nav>
-                <a href="/contact.html" class="menu-r">Contact</a>
-                <a href="/account.html" class="menu-r">Account</a>
-                <a href="/cart.html"><img src="/images2/bookmark-regular.svg" width="40px" height="30px"></a>
-                <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
+                <a href="../contact.html" class="menu-r">Contact</a>
+                <a href="../account.html" class="menu-r">Account</a>
+                <a href="../cart.html"><img src="../images2/bookmark-regular.svg" width="40px" height="30px"></a>
+                <img src="../images/menu.png" class="menu-icon" onclick="menutoggle()">
             </div>   
         </div>
         <div class="banner">
             <div class="slider">
-                <img src="/images2/highest yacht.jpg" id="slideImg">
+                <img src="../images2/highest yacht.jpg" id="slideImg">
             </div>
             <div class="overlay">
                 <div class="banner-content">
@@ -66,8 +66,8 @@
 
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-3.html"><img src="/images2/수정됨_product-3.webp"></a>
-                <a href="/product/product-3.html"><h4>Delta Gregory C Marshall 63m NFT</h4></a>
+                <a href="../product/product-3.html"><img src="../images2/수정됨_product-3.webp"></a>
+                <a href="../product/product-3.html"><h4>Delta Gregory C Marshall 63m NFT</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -78,8 +78,8 @@
                 <p>₩111,599,538,655</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-21.html"><img src="/images2/수정됨_product-21.webp"></a>
-                <a href="/product/product-21.html"><h4>Heesen 2017</h4></a>
+                <a href="../product/product-21.html"><img src="../images2/수정됨_product-21.webp"></a>
+                <a href="../product/product-21.html"><h4>Heesen 2017</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -90,8 +90,8 @@
                 <p>₩66,862,666,554</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-22.html"><img src="/images2/수정됨_product-22.webp"></a>
-                <a href="/product/product-22.html"><h4>G 500 164' 1" (50.00m) Dynamiq 2024</h4></a>
+                <a href="../product/product-22.html"><img src="../images2/수정됨_product-22.webp"></a>
+                <a href="../product/product-22.html"><h4>G 500 164' 1" (50.00m) Dynamiq 2024</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -102,8 +102,8 @@
                 <p>₩36,848,162,930</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-23.html"><img src="/images2/수정됨_product-23.webp"></a>
-                <a href="/product/product-23.html"><h4>Tecnomar for Lamborghini LY 63</h4></a>
+                <a href="../product/product-23.html"><img src="../images2/수정됨_product-23.webp"></a>
+                <a href="../product/product-23.html"><h4>Tecnomar for Lamborghini LY 63</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -116,8 +116,8 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-24.html"><img src="/images2/수정됨_product-24.webp"></a>
-                <a href="/product/product-24.html"><h4>Navigator Sagittarius By Navigator</h4></a>
+                <a href="../product/product-24.html"><img src="../images2/수정됨_product-24.webp"></a>
+                <a href="../product/product-24.html"><h4>Navigator Sagittarius By Navigator</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -128,8 +128,8 @@
                 <p>₩34,099,777,712</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-25.html"><img src="/images2/수정됨_product-25.webp"></a>
-                <a href="/product/product-25.html"><h4>Brabus Shadow 900 Cross Cabin Black Ops</h4></a>
+                <a href="../product/product-25.html"><img src="../images2/수정됨_product-25.webp"></a>
+                <a href="../product/product-25.html"><h4>Brabus Shadow 900 Cross Cabin Black Ops</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -140,8 +140,8 @@
                 <p>₩1,272,936,537</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-26.html"><img src="/images2/수정됨_product-26.webp"></a>
-                <a href="/product/product-26.html"><h4>Posillipo Technema 95</h4></a>
+                <a href="../product/product-26.html"><img src="../images2/수정됨_product-26.webp"></a>
+                <a href="../product/product-26.html"><h4>Posillipo Technema 95</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -152,8 +152,8 @@
                 <p>₩2,277,886,435</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-27.html"><img src="/images2/수정됨_product-27.webp"></a>
-                <a href="/product/product-27.html"><h4>Numarine 45XP Hull #1</h4></a>
+                <a href="../product/product-27.html"><img src="../images2/수정됨_product-27.webp"></a>
+                <a href="../product/product-27.html"><h4>Numarine 45XP Hull #1</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -183,12 +183,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="../images/play-store.png">
+                        <img src="../images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images2/logo2.png">
+                    <img src="../images2/logo2.png">
                     <p>Hight Quality pictures, all the information you need, and a number to contact in case of interest. Also a very user-friendly and easy site to navigate.</p>
                 </div>
                 <div class="footer-col-3">
@@ -237,10 +237,10 @@
     var slideImg = document.getElementById("slideImg");
 
     var images = new Array(
-            "/images2/highest yacht.jpg",
-            "/images2/product-21.webp",
-            "/images2/product-27.webp",
-            "/images2/product-14.webp"
+            "../images2/highest yacht.jpg",
+            "../images2/product-21.webp",
+            "../images2/product-27.webp",
+            "../images2/product-14.webp"
         );
 
     var len = images.length;
