--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </nav>
                 <a href="contact.html" class="menu-r">Contact</a>
                 <a href="account.html" class="menu-r">Account</a>
-                <a href="/cart.html"><img src="/images2/bookmark-regular.svg" width="40px" height="30px"></a>
+                <a href="cart.html"><img src="images2/bookmark-regular.svg" width="40px" height="30px"></a>
                 <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
             </div>   
         </div>
@@ -53,20 +53,20 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-3">
-                    <a href="/real_estate/real_estate-1.html"><img src="images2/category-1.jpg"></a>
-                    <a href="/real_estate/real_estate-1.html"><h2>Real Estate</h2></a>
+                    <a href="real_estate/real_estate-1.html"><img src="images2/category-1.jpg"></a>
+                    <a href="real_estate/real_estate-1.html"><h2>Real Estate</h2></a>
                 </div>
                 <div class="col-3">
-                    <a href="/car/car-1.html"><img src="images2/category-2.jpg"></a>
-                    <a href="/car/car-1.html"><h2>Cars</h2></a>
+                    <a href="car/car-1.html"><img src="images2/category-2.jpg"></a>
+                    <a href="car/car-1.html"><h2>Cars</h2></a>
                 </div>
                 <div class="col-3">
-                    <a href="/yacht/yacht-1.html"><img src="images2/category-3.jpg"></a>
-                    <a href="/yacht/yacht-1.html"><h2>Yachts</h2></a>
+                    <a href="yacht/yacht-1.html"><img src="images2/category-3.jpg"></a>
+                    <a href="yacht/yacht-1.html"><h2>Yachts</h2></a>
                 </div>
                 <div class="col-3">
-                    <a href="/jet/jet-1.html"><img src="images2/category-4.jpg"></a>
-                    <a href="/jet/jet-1.html"><h2>Jets</h2></a>
+                    <a href="jet/jet-1.html"><img src="images2/category-4.jpg"></a>
+                    <a href="jet/jet-1.html"><h2>Jets</h2></a>
                 </div>
             </div>
         </div>
@@ -76,8 +76,8 @@
         <h1 class="title">Popular Products</h1>
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-1.html"><img src="/images2/수정됨_product-1.webp"></a>
-                <a href="/product/product-1.html"><h4>The Art Luxury Villa With 5 Bedrooms</h4></a>
+                <a href="product/product-1.html"><img src="images2/수정됨_product-1.webp"></a>
+                <a href="product/product-1.html"><h4>The Art Luxury Villa With 5 Bedrooms</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -88,8 +88,8 @@
                 <p>₩7,381,888,729</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-2.html"><img src="/images2/product-2.jpg"></a>
-                <a href="/product/product-2.html"><h4>2023 Bugatti Centodieci</h4></a>
+                <a href="product/product-2.html"><img src="images2/product-2.jpg"></a>
+                <a href="product/product-2.html"><h4>2023 Bugatti Centodieci</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -100,8 +100,8 @@
                 <p>₩16,777,019,840</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-3.html"><img src="/images2/수정됨_product-3.webp"></a>
-                <a href="/product/product-3.html"><h4>Delta Gregory C Marshall 63m NFT</h4></a>
+                <a href="product/product-3.html"><img src="images2/수정됨_product-3.webp"></a>
+                <a href="product/product-3.html"><h4>Delta Gregory C Marshall 63m NFT</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -112,8 +112,8 @@
                 <p>₩111,599,538,655</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-4.html"><img src="/images2/수정됨_product-4.webp"></a>
-                <a href="/product/product-4.html"><h4>2010 Legacy 650</h4></a>
+                <a href="product/product-4.html"><img src="images2/수정됨_product-4.webp"></a>
+                <a href="product/product-4.html"><h4>2010 Legacy 650</h4></a>
                 <div class="rating">
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
@@ -127,8 +127,8 @@
         <h1 class="title">New & Trending</h1>
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-5.html"><img src="/images2/수정됨_product-5.webp"></a>
-                <a href="/product/product-5.html"><h4>Vivre Lake Deux Montagnes</h4></a>
+                <a href="product/product-5.html"><img src="images2/수정됨_product-5.webp"></a>
+                <a href="product/product-5.html"><h4>Vivre Lake Deux Montagnes</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -139,8 +139,8 @@
                 <p>₩14,367,096,062</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-6.html"><img src="/images2/수정됨_product-6.webp"></a>
-                <a href="/product/product-6.html"><h4>Antilopvägen 13</h4></a>
+                <a href="product/product-6.html"><img src="images2/수정됨_product-6.webp"></a>
+                <a href="product/product-6.html"><h4>Antilopvägen 13</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -151,8 +151,8 @@
                 <p>₩3,874,937,263</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-7.html"><img src="/images2/수정됨_product-7.webp"></a>
-                <a href="/product/product-7.html"><h4>Il Sogno The Dream</h4></a>
+                <a href="product/product-7.html"><img src="images2/수정됨_product-7.webp"></a>
+                <a href="product/product-7.html"><h4>Il Sogno The Dream</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -163,8 +163,8 @@
                 <p>₩48,065,071,335</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-8.html"><img src="/images2/수정됨_product-8.webp"></a>
-               <a href="/product/product-8.html"><h4>A Completed Resort in Virgin Island</h4></a>
+                <a href="product/product-8.html"><img src="images2/수정됨_product-8.webp"></a>
+               <a href="product/product-8.html"><h4>A Completed Resort in Virgin Island</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -177,8 +177,8 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-9.html"><img src="/images2/수정됨_product-9.webp"></a>
-                <a href="/product/product-9.html"><h4>Magnificent Historical Villa</h4></a>
+                <a href="product/product-9.html"><img src="images2/수정됨_product-9.webp"></a>
+                <a href="product/product-9.html"><h4>Magnificent Historical Villa</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -189,8 +189,8 @@
                 <p>₩7,784,537,205</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-10.html"><img src="/images2/수정됨_product-10.webp"></a>
-                <a href="/product/product-10.html"><h4>Alia</h4></a>
+                <a href="product/product-10.html"><img src="images2/수정됨_product-10.webp"></a>
+                <a href="product/product-10.html"><h4>Alia</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -201,8 +201,8 @@
                 <p>₩9,395,131,110</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-11.html"><img src="/images2/수정됨_product-11.webp"></a>
-                <a href="/product/product-11.html"><h4>An Architectural Delight In The Innovation</h4></a>
+                <a href="product/product-11.html"><img src="images2/수정됨_product-11.webp"></a>
+                <a href="product/product-11.html"><h4>An Architectural Delight In The Innovation</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -213,8 +213,8 @@
                 <p>₩9,046,169,097</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-12.html"><img src="/images2/수정됨_product-12.webp"></a>
-                <a href="/product/product-12.html"><h4>Namur I Castle Of Ostemerée</h4></a>
+                <a href="product/product-12.html"><img src="images2/수정됨_product-12.webp"></a>
+                <a href="product/product-12.html"><h4>Namur I Castle Of Ostemerée</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
