--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             </nav>
             <a href="contact.html" class="menu-r">Contact</a>
             <a href="account.html" class="menu-r">Account</a>
-            <a href="/cart.html"><img src="/images2/bookmark-regular.svg" width="40px" height="30px"></a>
+            <a href="cart.html"><img src="images2/bookmark-regular.svg" width="40px" height="30px"></a>
             <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
         </div>   
     </div>
