--- a/real_estate/real_estate-1.html
+++ b/real_estate/real_estate-1.html
@@ -19,22 +19,22 @@
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="/allproduct/allproduct-1.html">All products</a></li>
-                        <li><a href="/real_estate/real_estate-1.html">Real Estate</a></li>
-                        <li><a href="/car/car-1.html">Cars</a></li>
-                        <li><a href="/yacht/yacht-1.html">Yachts</a></li>
-                        <li><a href="/jet/jet-1.html">Jets</a></li>
+                        <li><a href="../allproduct/allproduct-1.html">All products</a></li>
+                        <li><a href="../real_estate/real_estate-1.html">Real Estate</a></li>
+                        <li><a href="../car/car-1.html">Cars</a></li>
+                        <li><a href="../yacht/yacht-1.html">Yachts</a></li>
+                        <li><a href="../jet/jet-1.html">Jets</a></li>
                     </ul>
                 </nav>
-                <a href="/contact.html" class="menu-r">Contact</a>
-                <a href="/account.html" class="menu-r">Account</a>
-                <a href="/cart.html"><img src="/images2/bookmark-regular.svg" width="40px" height="30px"></a>
-                <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
+                <a href="../contact.html" class="menu-r">Contact</a>
+                <a href="../account.html" class="menu-r">Account</a>
+                <a href="../cart.html"><img src="../images2/bookmark-regular.svg" width="40px" height="30px"></a>
+                <img src="../images/menu.png" class="menu-icon" onclick="menutoggle()">
             </div>   
         </div>
         <div class="banner">
             <div class="slider">
-                <img src="/images2/highest home.jpg" id="slideImg">
+                <img src="../images2/highest home.jpg" id="slideImg">
             </div>
             <div class="overlay">
                 <div class="banner-content">
@@ -66,8 +66,8 @@
 
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-1.html"><img src="/images2/수정됨_product-1.webp"></a>
-                <a href="/product/product-1.html"><h4>The Art Luxury Villa With 5 Bedrooms</h4></a>
+                <a href="../product/product-1.html"><img src="../images2/수정됨_product-1.webp"></a>
+                <a href="../product/product-1.html"><h4>The Art Luxury Villa With 5 Bedrooms</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -78,8 +78,8 @@
                 <p>&#8361;7,381,888,729</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-5.html"><img src="/images2/수정됨_product-5.webp"></a>
-                <a href="/product/product-5.html"><h4>Vivre Lake Deux Montagnes</h4></a>
+                <a href="../product/product-5.html"><img src="../images2/수정됨_product-5.webp"></a>
+                <a href="../product/product-5.html"><h4>Vivre Lake Deux Montagnes</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -90,8 +90,8 @@
                 <p>₩14,367,096,062</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-6.html"><img src="/images2/수정됨_product-6.webp"></a>
-                <a href="/product/product-6.html"><h4>Antilopvägen 13</h4></a>
+                <a href="../product/product-6.html"><img src="../images2/수정됨_product-6.webp"></a>
+                <a href="../product/product-6.html"><h4>Antilopvägen 13</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -102,8 +102,8 @@
                 <p>₩3,874,937,263</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-7.html"><img src="/images2/수정됨_product-7.webp"></a>
-                <a href="/product/product-7.html"><h4>Il Sogno The Dream</h4></a>
+                <a href="../product/product-7.html"><img src="../images2/수정됨_product-7.webp"></a>
+                <a href="../product/product-7.html"><h4>Il Sogno The Dream</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -116,8 +116,8 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-8.html"><img src="/images2/수정됨_product-8.webp"></a>
-               <a href="/product/product-8.html"><h4>A Completed Resort in Virgin Island</h4></a>
+                <a href="../product/product-8.html"><img src="../images2/수정됨_product-8.webp"></a>
+               <a href="../product/product-8.html"><h4>A Completed Resort in Virgin Island</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -128,8 +128,8 @@
                 <p>₩79,094,421,185</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-9.html"><img src="/images2/수정됨_product-9.webp"></a>
-                <a href="/product/product-9.html"><h4>Magnificent Historical Villa</h4></a>
+                <a href="../product/product-9.html"><img src="../images2/수정됨_product-9.webp"></a>
+                <a href="../product/product-9.html"><h4>Magnificent Historical Villa</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -140,8 +140,8 @@
                 <p>₩7,784,537,205</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-10.html"><img src="/images2/수정됨_product-10.webp"></a>
-                <a href="/product/product-10.html"><h4>Alia</h4></a>
+                <a href="../product/product-10.html"><img src="../images2/수정됨_product-10.webp"></a>
+                <a href="../product/product-10.html"><h4>Alia</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -152,8 +152,8 @@
                 <p>₩9,395,131,110</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-11.html"><img src="/images2/수정됨_product-11.webp"></a>
-                <a href="/product/product-11.html"><h4>An Architectural Delight In The Innovation</h4></a>
+                <a href="../product/product-11.html"><img src="../images2/수정됨_product-11.webp"></a>
+                <a href="../product/product-11.html"><h4>An Architectural Delight In The Innovation</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -183,12 +183,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="../images/play-store.png">
+                        <img src="../images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images2/logo2.png">
+                    <img src="../images2/logo2.png">
                     <p>Hight Quality pictures, all the information you need, and a number to contact in case of interest. Also a very user-friendly and easy site to navigate.</p>
                 </div>
                 <div class="footer-col-3">
@@ -237,10 +237,10 @@
     var slideImg = document.getElementById("slideImg");
 
     var images = new Array(
-            "/images2/highest home.jpg",
-            "/images2/product-9.webp",
-            "/images2/product-6.webp",
-            "/images2/product-5.webp"
+            "../images2/highest home.jpg",
+            "../images2/product-9.webp",
+            "../images2/product-6.webp",
+            "../images2/product-5.webp"
         );
 
     var len = images.length;
