--- a/allproduct/allproduct-2.html
+++ b/allproduct/allproduct-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RedStore | All Products</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a533d3691d.js" crossorigin="anonymous"></script>
 </head>
@@ -14,21 +14,21 @@
     <div class="container-logo">
         <div class="navbar">
             <div class="logo">
-                <a href="/index.html"><img src="/images2/logo3.png" width="180px" height="50px" alt="로고"></a>
+                <a href="../index.html"><img src="../images2/logo3.png" width="180px" height="50px" alt="로고"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="/allproduct/allproduct-1.html">All products</a></li>
-                    <li><a href="/real_estate/real_estate-1.html">Real Estate</a></li>
-                    <li><a href="/car/car-1.html">Cars</a></li>
-                    <li><a href="/yacht/yacht-1.html">Yachts</a></li>
-                    <li><a href="/jet/jet-1.html">Jets</a></li>
+                    <li><a href="./allproduct/allproduct-1.html">All products</a></li>
+                    <li><a href="../real_estate/real_estate-1.html">Real Estate</a></li>
+                    <li><a href="../car/car-1.html">Cars</a></li>
+                    <li><a href="../yacht/yacht-1.html">Yachts</a></li>
+                    <li><a href="../jet/jet-1.html">Jets</a></li>
                 </ul>
             </nav>
-            <a href="/contact.html" class="menu-r">Contact</a>
-            <a href="/account.html" class="menu-r">Account</a>
-            <a href="/cart.html"><img src="/images2/bookmark-regular.svg" width="40px" height="30px"></a>
-            <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <a href="../contact.html" class="menu-r">Contact</a>
+            <a href="../account.html" class="menu-r">Account</a>
+            <a href="../cart.html"><img src="../images2/bookmark-regular.svg" width="40px" height="30px"></a>
+            <img src="../images/menu.png" class="menu-icon" onclick="menutoggle()">
         </div>   
     </div>
     
@@ -47,8 +47,8 @@
 
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-13.html"><img src="/images2/수정됨_product-13.webp"></a>
-                <a href="/product/product-13.html"><h4>Lamborghini Sian</h4></a>
+                <a href="../product/product-13.html"><img src="../images2/수정됨_product-13.webp"></a>
+                <a href="../product/product-13.html"><h4>Lamborghini Sian</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -59,8 +59,8 @@
                 <p>₩4,866,246,195</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-14.html"><img src="/images2/수정됨_product-14.webp"></a>
-                <a href="/product/product-14.html"><h4>2019 Bugatti Chiron awd</h4></a>
+                <a href="../product/product-14.html"><img src="../images2/수정됨_product-14.webp"></a>
+                <a href="../product/product-14.html"><h4>2019 Bugatti Chiron awd</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -71,8 +71,8 @@
                 <p>₩4,967,855,545</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-15.html"><img src="/images2/수정됨_product-15.webp"></a>
-                <a href="/product/product-15.html"><h4>2020 Pagani Huayra Roadster</h4></a>
+                <a href="../product/product-15.html"><img src="../images2/수정됨_product-15.webp"></a>
+                <a href="../product/product-15.html"><h4>2020 Pagani Huayra Roadster</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -83,8 +83,8 @@
                 <p>₩4,516,448,781</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-16.html"><img src="/images2/수정됨_product-16.webp"></a>
-                <a href="/product/product-16.html"><h4>2022 Apocalypse Hellfire</h4></a>
+                <a href="../product/product-16.html"><img src="../images2/수정됨_product-16.webp"></a>
+                <a href="../product/product-16.html"><h4>2022 Apocalypse Hellfire</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -97,8 +97,8 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-17.html"><img src="/images2/수정됨_product-17.webp"></a>
-                <a href="/product/product-17.html"><h4>2015 Ferrari LaFerrari</h4></a>
+                <a href="../product/product-17.html"><img src="../images2/수정됨_product-17.webp"></a>
+                <a href="../product/product-17.html"><h4>2015 Ferrari LaFerrari</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -109,8 +109,8 @@
                 <p>₩4,305,761,856</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-18.html"><img src="/images2/수정됨_product-18.webp"></a>
-                <a href="/product/product-18.html"><h4>2021 Bugatti Divo</h4></a>
+                <a href="../product/product-18.html"><img src="../images2/수정됨_product-18.webp"></a>
+                <a href="../product/product-18.html"><h4>2021 Bugatti Divo</h4></a>
                 <div class="rating">
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
@@ -121,8 +121,8 @@
                 <p>Price On Request</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-19.html"><img src="/images2/수정됨_product-19.webp"></a>
-                <a href="/product/product-19.html"><h4>2014 Koenigsegg Agera R</h4></a>
+                <a href="../product/product-19.html"><img src="../images2/수정됨_product-19.webp"></a>
+                <a href="../product/product-19.html"><h4>2014 Koenigsegg Agera R</h4></a>
                 <div class="rating">
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
@@ -133,8 +133,8 @@
                 <p>Price On Request</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-20.html"><img src="/images2/수정됨_product-20.webp"></a>
-                <a href="/product/product-20.html"><h4>2021 Aspark Owl</h4></a>
+                <a href="../product/product-20.html"><img src="../images2/수정됨_product-20.webp"></a>
+                <a href="../product/product-20.html"><h4>2021 Aspark Owl</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -147,8 +147,8 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-21.html"><img src="/images2/수정됨_product-21.webp"></a>
-                <a href="/product/product-21.html"><h4>Heesen 2017</h4></a>
+                <a href="../product/product-21.html"><img src="../images2/수정됨_product-21.webp"></a>
+                <a href="../product/product-21.html"><h4>Heesen 2017</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -159,8 +159,8 @@
                 <p>₩66,862,666,554</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-22.html"><img src="/images2/수정됨_product-22.webp"></a>
-                <a href="/product/product-22.html"><h4>G 500 164' 1" (50.00m) Dynamiq 2024</h4></a>
+                <a href="../product/product-22.html"><img src="../images2/수정됨_product-22.webp"></a>
+                <a href="../product/product-22.html"><h4>G 500 164' 1" (50.00m) Dynamiq 2024</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -171,8 +171,8 @@
                 <p>₩36,848,162,930</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-23.html"><img src="/images2/수정됨_product-23.webp"></a>
-                <a href="/product/product-23.html"><h4>Tecnomar for Lamborghini LY 63</h4></a>
+                <a href="../product/product-23.html"><img src="../images2/수정됨_product-23.webp"></a>
+                <a href="../product/product-23.html"><h4>Tecnomar for Lamborghini LY 63</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -183,8 +183,8 @@
                 <p>₩4,019,799,592</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-24.html"><img src="/images2/수정됨_product-24.webp"></a>
-                <a href="/product/product-24.html"><h4>Navigator Sagittarius By Navigator</h4></a>
+                <a href="../product/product-24.html"><img src="../images2/수정됨_product-24.webp"></a>
+                <a href="../product/product-24.html"><h4>Navigator Sagittarius By Navigator</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -197,9 +197,9 @@
         </div>
 
         <div class="page-btn">
-            <span><a href="allproduct-1.html">1</a> </span>
-            <span><a href="allproduct-2.html">2</a> </span>
-            <span><a href="allproduct-3.html">3</a> </span>
+            <span><a href="./allproduct-1.html">1</a> </span>
+            <span><a href="./allproduct-2.html">2</a> </span>
+            <span><a href="./allproduct-3.html">3</a> </span>
             <span>&#8594</span>
         </div>
     </div>
@@ -213,12 +213,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="../images/play-store.png">
+                        <img src="../images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images2/logo2.png">
+                    <img src="../images2/logo2.png">
                     <p>Hight Quality pictures, all the information you need, and a number to contact in case of interest. Also a very user-friendly and easy site to navigate.</p>
                 </div>
                 <div class="footer-col-3">
