--- a/allproduct/allproduct-3.html
+++ b/allproduct/allproduct-3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RedStore | All Products</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a533d3691d.js" crossorigin="anonymous"></script>
 </head>
@@ -14,21 +14,21 @@
     <div class="container-logo">
         <div class="navbar">
             <div class="logo">
-                <a href="/index.html"><img src="/images2/logo3.png" width="180px" height="50px" alt="로고"></a>
+                <a href="../index.html"><img src="../images2/logo3.png" width="180px" height="50px" alt="로고"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="/allproduct/allproduct-1.html">All products</a></li>
-                    <li><a href="/real_estate/real_estate-1.html">Real Estate</a></li>
-                    <li><a href="/car/car-1.html">Cars</a></li>
-                    <li><a href="/yacht/yacht-1.html">Yachts</a></li>
-                    <li><a href="/jet/jet-1.html">Jets</a></li>
+                    <li><a href="./allproduct/allproduct-1.html">All products</a></li>
+                    <li><a href="../real_estate/real_estate-1.html">Real Estate</a></li>
+                    <li><a href="../car/car-1.html">Cars</a></li>
+                    <li><a href="../yacht/yacht-1.html">Yachts</a></li>
+                    <li><a href="../jet/jet-1.html">Jets</a></li>
                 </ul>
             </nav>
-            <a href="/contact.html" class="menu-r">Contact</a>
-            <a href="/account.html" class="menu-r">Account</a>
-            <a href="/cart.html"><img src="/images2/bookmark-regular.svg" width="40px" height="30px"></a>
-            <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <a href="../contact.html" class="menu-r">Contact</a>
+            <a href="../account.html" class="menu-r">Account</a>
+            <a href="../cart.html"><img src="../images2/bookmark-regular.svg" width="40px" height="30px"></a>
+            <img src="../images/menu.png" class="menu-icon" onclick="menutoggle()">
         </div>   
     </div>
     
@@ -47,8 +47,8 @@
 
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-25.html"><img src="/images2/수정됨_product-25.webp"></a>
-                <a href="/product/product-25.html"><h4>Brabus Shadow 900 Cross Cabin Black Ops</h4></a>
+                <a href="../product/product-25.html"><img src="../images2/수정됨_product-25.webp"></a>
+                <a href="../product/product-25.html"><h4>Brabus Shadow 900 Cross Cabin Black Ops</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -59,8 +59,8 @@
                 <p>₩1,272,936,537</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-26.html"><img src="/images2/수정됨_product-26.webp"></a>
-                <a href="/product/product-26.html"><h4>Posillipo Technema 95</h4></a>
+                <a href="../product/product-26.html"><img src="../images2/수정됨_product-26.webp"></a>
+                <a href="../product/product-26.html"><h4>Posillipo Technema 95</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -71,8 +71,8 @@
                 <p>₩2,277,886,435</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-27.html"><img src="/images2/수정됨_product-27.webp"></a>
-                <a href="/product/product-27.html"><h4>Numarine 45XP Hull #1</h4></a>
+                <a href="../product/product-27.html"><img src="../images2/수정됨_product-27.webp"></a>
+                <a href="../product/product-27.html"><h4>Numarine 45XP Hull #1</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -83,8 +83,8 @@
                 <p>₩28,497,671,373</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-28.html"><img src="/images2/수정됨_product-28.webp"></a>
-                <a href="/product/product-28.html"><h4>CENTAURO 110m Custom Yacht 2026</h4></a>
+                <a href="../product/product-28.html"><img src="../images2/수정됨_product-28.webp"></a>
+                <a href="../product/product-28.html"><h4>CENTAURO 110m Custom Yacht 2026</h4></a>
                 <div class="rating">
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
@@ -97,8 +97,8 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-29.html"><img src="/images2/수정됨_product-29.webp"></a>
-                <a href="/product/product-29.html"><h4>Sea Force IX Sportfish</h4></a>
+                <a href="../product/product-29.html"><img src="../images2/수정됨_product-29.webp"></a>
+                <a href="../product/product-29.html"><h4>Sea Force IX Sportfish</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -109,8 +109,8 @@
                 <p>₩13,883,480,925</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-30.html"><img src="/images2/수정됨_product-30.webp"></a>
-                <a href="/product/product-30.html"><h4>2016 Gulfstream G650</h4></a>
+                <a href="../product/product-30.html"><img src="../images2/수정됨_product-30.webp"></a>
+                <a href="../product/product-30.html"><h4>2016 Gulfstream G650</h4></a>
                 <div class="rating">
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
@@ -121,8 +121,8 @@
                 <p>Price On Request</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-31.html"><img src="/images2/수정됨_product-31.webp"></a>
-                <a href="/product/product-31.html"><h4>Gulfstream G550</h4></a>
+                <a href="../product/product-31.html"><img src="../images2/수정됨_product-31.webp"></a>
+                <a href="../product/product-31.html"><h4>Gulfstream G550</h4></a>
                 <div class="rating">
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
@@ -133,8 +133,8 @@
                 <p>Price On Request</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-32.html"><img src="/images2/수정됨_product-32.webp"></a>
-                <a href="/product/product-32.html"><h4>2011 Pilatus PC12</h4></a>
+                <a href="../product/product-32.html"><img src="../images2/수정됨_product-32.webp"></a>
+                <a href="../product/product-32.html"><h4>2011 Pilatus PC12</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -147,8 +147,8 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-33.html"><img src="/images2/수정됨_product-33.webp"></a>
-                <a href="/product/product-33.html"><h4>2016 BOMBARDIER GLOBAL 6000</h4></a>
+                <a href="../product/product-33.html"><img src="../images2/수정됨_product-33.webp"></a>
+                <a href="../product/product-33.html"><h4>2016 BOMBARDIER GLOBAL 6000</h4></a>
                 <div class="rating">
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
@@ -159,8 +159,8 @@
                 <p>Price On Request</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-34.html"><img src="/images2/수정됨_product-34.webp"></a>
-                <a href="/product/product-34.html"><h4>2013 Dassault Falcon 7X</h4></a>
+                <a href="../product/product-34.html"><img src="../images2/수정됨_product-34.webp"></a>
+                <a href="../product/product-34.html"><h4>2013 Dassault Falcon 7X</h4></a>
                 <div class="rating">
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
@@ -171,8 +171,8 @@
                 <p>Price On Request</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-35.html"><img src="/images2/수정됨_product-35.webp"></a>
-                <a href="/product/product-35.html"><h4>Piper PA46T Meridian Turbo Prop D-EPPG</h4></a>
+                <a href="../product/product-35.html"><img src="../images2/수정됨_product-35.webp"></a>
+                <a href="../product/product-35.html"><h4>Piper PA46T Meridian Turbo Prop D-EPPG</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -183,8 +183,8 @@
                 <p>₩924,553,906</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-36.html"><img src="/images2/수정됨_product-36.webp"></a>
-                <a href="/product/product-36.html"><h4>EXCLUSIVE MANDATE - LEGACY 600</h4></a>
+                <a href="../product/product-36.html"><img src="../images2/수정됨_product-36.webp"></a>
+                <a href="../product/product-36.html"><h4>EXCLUSIVE MANDATE - LEGACY 600</h4></a>
                 <div class="rating">
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
@@ -197,9 +197,9 @@
         </div>
 
         <div class="page-btn">
-            <span><a href="allproduct-1.html">1</a> </span>
-            <span><a href="allproduct-2.html">2</a> </span>
-            <span><a href="allproduct-3.html">3</a> </span>
+            <span><a href="./allproduct-1.html">1</a> </span>
+            <span><a href="./allproduct-2.html">2</a> </span>
+            <span><a href="./allproduct-3.html">3</a> </span>
             <span>&#8594</span>
         </div>
     </div>
@@ -213,12 +213,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="../images/play-store.png">
+                        <img src="../images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images2/logo2.png">
+                    <img src="../images2/logo2.png">
                     <p>Hight Quality pictures, all the information you need, and a number to contact in case of interest. Also a very user-friendly and easy site to navigate.</p>
                 </div>
                 <div class="footer-col-3">
