--- a/car/car-1.html
+++ b/car/car-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JamesEdition | Real Estate</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a533d3691d.js" crossorigin="anonymous"></script>
 </head>
@@ -15,13 +15,13 @@
         <div class="container-logo">
             <div class="navbar">
                 <div class="logo">
-                    <a href="/index.html"><img src="/images2/logo3.png" width="180px" height="50px" alt="로고"></a>
+                    <a href="../index.html"><img src="../images2/logo3.png" width="180px" height="50px" alt="로고"></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="/allproduct/allproduct-1.html">All products</a></li>
-                        <li><a href="/real_estate/real_estate-1.html">Real Estate</a></li>
-                        <li><a href="/car/car-1.html">Cars</a></li>
+                        <li><a href="../allproduct/allproduct-1.html">All products</a></li>
+                        <li><a href="../real_estate/real_estate-1.html">Real Estate</a></li>
+                        <li><a href="./car/car-1.html">Cars</a></li>
                         <li><a href="/yacht/yacht-1.html">Yachts</a></li>
                         <li><a href="/jet/jet-1.html">Jets</a></li>
                     </ul>
