--- a/car/car-1.html
+++ b/car/car-1.html
@@ -22,19 +22,19 @@
                         <li><a href="../allproduct/allproduct-1.html">All products</a></li>
                         <li><a href="../real_estate/real_estate-1.html">Real Estate</a></li>
                         <li><a href="./car/car-1.html">Cars</a></li>
-                        <li><a href="/yacht/yacht-1.html">Yachts</a></li>
-                        <li><a href="/jet/jet-1.html">Jets</a></li>
+                        <li><a href="../yacht/yacht-1.html">Yachts</a></li>
+                        <li><a href="../jet/jet-1.html">Jets</a></li>
                     </ul>
                 </nav>
-                <a href="/contact.html" class="menu-r">Contact</a>
-                <a href="/account.html" class="menu-r">Account</a>
-                <a href="/cart.html"><img src="/images2/bookmark-regular.svg" width="40px" height="30px"></a>
-                <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
+                <a href="../contact.html" class="menu-r">Contact</a>
+                <a href="../account.html" class="menu-r">Account</a>
+                <a href="../cart.html"><img src="../images2/bookmark-regular.svg" width="40px" height="30px"></a>
+                <img src="../images/menu.png" class="menu-icon" onclick="menutoggle()">
             </div>   
         </div>
         <div class="banner">
             <div class="slider">
-                <img src="/images2/highest car.jpg" id="slideImg">
+                <img src="../images2/highest car.jpg" id="slideImg">
             </div>
             <div class="overlay">
                 <div class="banner-content">
