--- a/allproduct/allproduct-1.html
+++ b/allproduct/allproduct-1.html
@@ -18,7 +18,7 @@
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="./allproduct-1.html">All products</a></li>
+                    <li><a href="allproduct-1.html">All products</a></li>
                     <li><a href="../real_estate/real_estate-1.html">Real Estate</a></li>
                     <li><a href="../car/car-1.html">Cars</a></li>
                     <li><a href="../yacht/yacht-1.html">Yachts</a></li>
@@ -197,9 +197,9 @@
         </div>
 
         <div class="page-btn">
-            <span><a href="./allproduct-1.html">1</a> </span>
-            <span><a href="./allproduct-2.html">2</a> </span>
-            <span><a href="./allproduct-3.html">3</a> </span>
+            <span><a href="allproduct-1.html">1</a> </span>
+            <span><a href="allproduct-2.html">2</a> </span>
+            <span><a href="allproduct-3.html">3</a> </span>
             <span>&#8594</span>
         </div>
     </div>
