--- a/allproduct/allproduct-3.html
+++ b/allproduct/allproduct-3.html
@@ -18,7 +18,7 @@
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="allproduct-1.html">All products</a></li>
+                    <li><a href="./allproduct-1.html">All products</a></li>
                     <li><a href="../real_estate/real_estate-1.html">Real Estate</a></li>
                     <li><a href="../car/car-1.html">Cars</a></li>
                     <li><a href="../yacht/yacht-1.html">Yachts</a></li>
