--- a/car/car-1.html
+++ b/car/car-1.html
@@ -21,7 +21,7 @@
                     <ul id="MenuItems">
                         <li><a href="../allproduct/allproduct-1.html">All products</a></li>
                         <li><a href="../real_estate/real_estate-1.html">Real Estate</a></li>
-                        <li><a href="./car/car-1.html">Cars</a></li>
+                        <li><a href="./car-1.html">Cars</a></li>
                         <li><a href="../yacht/yacht-1.html">Yachts</a></li>
                         <li><a href="../jet/jet-1.html">Jets</a></li>
                     </ul>
@@ -66,8 +66,8 @@
 
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-2.html"><img src="/images2/product-2.jpg"></a>
-                <a href="/product/product-2.html"><h4>2023 Bugatti Centodieci</h4></a>
+                <a href="../product/product-2.html"><img src="../images2/product-2.jpg"></a>
+                <a href="../product/product-2.html"><h4>2023 Bugatti Centodieci</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -78,8 +78,8 @@
                 <p>₩16,777,019,840</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-13.html"><img src="/images2/수정됨_product-13.webp"></a>
-                <a href="/product/product-13.html"><h4>Lamborghini Sian</h4></a>
+                <a href="../product/product-13.html"><img src="../images2/수정됨_product-13.webp"></a>
+                <a href="../product/product-13.html"><h4>Lamborghini Sian</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -90,8 +90,8 @@
                 <p>₩4,866,246,195</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-14.html"><img src="/images2/수정됨_product-14.webp"></a>
-                <a href="/product/product-14.html"><h4>2019 Bugatti Chiron awd</h4></a>
+                <a href="../product/product-14.html"><img src="../images2/수정됨_product-14.webp"></a>
+                <a href="../product/product-14.html"><h4>2019 Bugatti Chiron awd</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -102,8 +102,8 @@
                 <p>₩4,967,855,545</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-15.html"><img src="/images2/수정됨_product-15.webp"></a>
-                <a href="/product/product-15.html"><h4>2020 Pagani Huayra Roadster</h4></a>
+                <a href="../product/product-15.html"><img src="../images2/수정됨_product-15.webp"></a>
+                <a href="../product/product-15.html"><h4>2020 Pagani Huayra Roadster</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -116,8 +116,8 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-16.html"><img src="/images2/수정됨_product-16.webp"></a>
-                <a href="/product/product-16.html"><h4>2022 Apocalypse Hellfire</h4></a>
+                <a href="../product/product-16.html"><img src="../images2/수정됨_product-16.webp"></a>
+                <a href="../product/product-16.html"><h4>2022 Apocalypse Hellfire</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -128,8 +128,8 @@
                 <p>₩273,729,701</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-17.html"><img src="/images2/수정됨_product-17.webp"></a>
-                <a href="/product/product-17.html"><h4>2015 Ferrari LaFerrari</h4></a>
+                <a href="../product/product-17.html"><img src="../images2/수정됨_product-17.webp"></a>
+                <a href="../product/product-17.html"><h4>2015 Ferrari LaFerrari</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -140,8 +140,8 @@
                 <p>₩4,305,761,856</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-18.html"><img src="/images2/수정됨_product-18.webp"></a>
-                <a href="/product/product-18.html"><h4>2021 Bugatti Divo</h4></a>
+                <a href="../product/product-18.html"><img src="../images2/수정됨_product-18.webp"></a>
+                <a href="../product/product-18.html"><h4>2021 Bugatti Divo</h4></a>
                 <div class="rating">
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
@@ -152,8 +152,8 @@
                 <p>Price On Request</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-19.html"><img src="/images2/수정됨_product-19.webp"></a>
-                <a href="/product/product-19.html"><h4>2014 Koenigsegg Agera R</h4></a>
+                <a href="../product/product-19.html"><img src="../images2/수정됨_product-19.webp"></a>
+                <a href="../product/product-19.html"><h4>2014 Koenigsegg Agera R</h4></a>
                 <div class="rating">
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
@@ -183,12 +183,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="../images/play-store.png">
+                        <img src="../images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images2/logo2.png">
+                    <img src="../images2/logo2.png">
                     <p>Hight Quality pictures, all the information you need, and a number to contact in case of interest. Also a very user-friendly and easy site to navigate.</p>
                 </div>
                 <div class="footer-col-3">
@@ -237,10 +237,10 @@
     var slideImg = document.getElementById("slideImg");
 
     var images = new Array(
-            "/images2/highest car.jpg",
-            "/images2/product-13.webp",
-            "/images2/product-15.webp",
-            "/images2/product-19.webp"
+            "../images2/highest car.jpg",
+            "../images2/product-13.webp",
+            "../images2/product-15.webp",
+            "../images2/product-19.webp"
         );
 
     var len = images.length;
