--- a/product/product-4.html
+++ b/product/product-4.html
@@ -12,22 +12,22 @@
     <div class="container-logo">
         <div class="navbar">
             <div class="logo">
-                <a href="/index.html"><img src="/images2/logo3.png" width="180px" height="50px" alt="로고"></a>
+                <a href="../index.html"><img src="../images2/logo3.png" width="180px" height="50px" alt="로고"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="/allproduct/allproduct-1.html">All products</a></li>
-                    <li><a href="/real_estate/real_estate-1.html">Real Estate</a></li>
-                    <li><a href="/car/car-1.html">Cars</a></li>
-                    <li><a href="/yacht/yacht-1.html">Yachts</a></li>
-                    <li><a href="/jet/jet-1.html">Jets</a></li>
+                    <li><a href="../allproduct/allproduct-1.html">All products</a></li>
+                    <li><a href="../real_estate/real_estate-1.html">Real Estate</a></li>
+                    <li><a href="../car/car-1.html">Cars</a></li>
+                    <li><a href="../yacht/yacht-1.html">Yachts</a></li>
+                    <li><a href="../jet/jet-1.html">Jets</a></li>
                 </ul>
             </nav>
-            <a href="/contact.html" class="menu-r">Contact</a>
-            <a href="/account.html" class="menu-r">Account</a>
-            <a href="/cart.html"><img src="/images2/bookmark-regular.svg" width="40px" height="30px"></a>
-            <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
-        </div>   
+            <a href="../contact.html" class="menu-r">Contact</a>
+            <a href="../account.html" class="menu-r">Account</a>
+            <a href="../cart.html"><img src="../images2/bookmark-regular.svg" width="40px" height="30px"></a>
+            <img src="../images/menu.png" class="menu-icon" onclick="menutoggle()">
+        </div>  
     </div>
 
 <!-- --------  single product details ----------  -->
@@ -35,20 +35,20 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="/images2/편집_p-4-1.jpg" width="100%" id="ProductImg">
+                <img src="../images2/편집_p-4-1.jpg" width="100%" id="ProductImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="/images2/편집_p-4-2.jpg"  width="100%" class="small-img">
+                        <img src="../images2/편집_p-4-2.jpg"  width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images2/편집_p-4-3.jpg" width="100%" class="small-img">
+                        <img src="../images2/편집_p-4-3.jpg" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images2/편집_p-4-4.jpg" width="100%" class="small-img">
+                        <img src="../images2/편집_p-4-4.jpg" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images2/수정됨_none.png" width="100%" class="small-img">
+                        <img src="../images2/수정됨_none.png" width="100%" class="small-img">
                     </div>
                 </div>
             </div>
@@ -57,8 +57,8 @@
                 <p> Home / Jets</p>
                 <h2>2010 Legacy 650</h2>
                 <h4>Price On Request</h4>
-                <a href="/cart.html" class="btn">Add To Watchlist</a>
-                <a href="/contact.html" class="btn">Send Message</a>
+                <a href="../cart.html" class="btn">Add To Watchlist</a>
+                <a href="../contact.html" class="btn">Send Message</a>
                 </div>
                 <h3>Product Details <i class="fa-solid fa-indent"></i></h3>
                 <table style="margin-top: 10px; width: 100%; text-align: center; font-weight: bold; border: 2px solid black;">
@@ -216,8 +216,8 @@
     <div class="small-container">
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-33.html"><img src="/images2/수정됨_product-33.webp"></a>
-                <a href="/product/product-33.html"><h4>2016 BOMBARDIER GLOBAL 6000</h4></a>
+                <a href="./product-33.html"><img src="../images2/수정됨_product-33.webp"></a>
+                <a href="./product-33.html"><h4>2016 BOMBARDIER GLOBAL 6000</h4></a>
                 <div class="rating">
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
@@ -228,8 +228,8 @@
                 <p>Price On Request</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-34.html"><img src="/images2/수정됨_product-34.webp"></a>
-                <a href="/product/product-34.html"><h4>2013 Dassault Falcon 7X</h4></a>
+                <a href="./product-34.html"><img src="../images2/수정됨_product-34.webp"></a>
+                <a href="./product-34.html"><h4>2013 Dassault Falcon 7X</h4></a>
                 <div class="rating">
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
@@ -240,8 +240,8 @@
                 <p>Price On Request</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-35.html"><img src="/images2/수정됨_product-35.webp"></a>
-                <a href="/product/product-35.html"><h4>Piper PA46T Meridian Turbo Prop D-EPPG</h4></a>
+                <a href="./product-35.html"><img src="../images2/수정됨_product-35.webp"></a>
+                <a href="./product-35.html"><h4>Piper PA46T Meridian Turbo Prop D-EPPG</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -252,8 +252,8 @@
                 <p>₩924,553,906</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-36.html"><img src="/images2/수정됨_product-36.webp"></a>
-                <a href="/product/product-36.html"><h4>EXCLUSIVE MANDATE - LEGACY 600</h4></a>
+                <a href="./product-36.html"><img src="../images2/수정됨_product-36.webp"></a>
+                <a href="./product-36.html"><h4>EXCLUSIVE MANDATE - LEGACY 600</h4></a>
                 <div class="rating">
                     <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
@@ -275,12 +275,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="../images/play-store.png">
+                        <img src="../images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images2/logo2.png">
+                    <img src="../images2/logo2.png">
                     <p>Hight Quality pictures, all the information you need, and a number to contact in case of interest. Also a very user-friendly and easy site to navigate.</p>
                 </div>
                 <div class="footer-col-3">
