--- a/yacht/yacht-1.html
+++ b/yacht/yacht-1.html
@@ -22,7 +22,7 @@
                         <li><a href="../allproduct/allproduct-1.html">All products</a></li>
                         <li><a href="../real_estate/real_estate-1.html">Real Estate</a></li>
                         <li><a href="../car/car-1.html">Cars</a></li>
-                        <li><a href="../yacht/yacht-1.html">Yachts</a></li>
+                        <li><a href="./yacht-1.html">Yachts</a></li>
                         <li><a href="../jet/jet-1.html">Jets</a></li>
                     </ul>
                 </nav>
