--- a/product/product-10.html
+++ b/product/product-10.html
@@ -12,22 +12,22 @@
     <div class="container-logo">
         <div class="navbar">
             <div class="logo">
-                <a href="/index.html"><img src="/images2/logo3.png" width="180px" height="50px" alt="로고"></a>
+                <a href="../index.html"><img src="../images2/logo3.png" width="180px" height="50px" alt="로고"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="/allproduct/allproduct-1.html">All products</a></li>
-                    <li><a href="/real_estate/real_estate-1.html">Real Estate</a></li>
-                    <li><a href="/car/car-1.html">Cars</a></li>
-                    <li><a href="/yacht/yacht-1.html">Yachts</a></li>
-                    <li><a href="/jet/jet-1.html">Jets</a></li>
+                    <li><a href="../allproduct/allproduct-1.html">All products</a></li>
+                    <li><a href="../real_estate/real_estate-1.html">Real Estate</a></li>
+                    <li><a href="../car/car-1.html">Cars</a></li>
+                    <li><a href="../yacht/yacht-1.html">Yachts</a></li>
+                    <li><a href="../jet/jet-1.html">Jets</a></li>
                 </ul>
             </nav>
-            <a href="/contact.html" class="menu-r">Contact</a>
-            <a href="/account.html" class="menu-r">Account</a>
-            <a href="/cart.html"><img src="/images2/bookmark-regular.svg" width="40px" height="30px"></a>
-            <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
-        </div>   
+            <a href="../contact.html" class="menu-r">Contact</a>
+            <a href="../account.html" class="menu-r">Account</a>
+            <a href="../cart.html"><img src="../images2/bookmark-regular.svg" width="40px" height="30px"></a>
+            <img src="../images/menu.png" class="menu-icon" onclick="menutoggle()">
+        </div>  
     </div>
 
 <!-- --------  single product details ----------  -->
@@ -35,20 +35,20 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="/images2/편집_p-10-1.jpg" width="100%" id="ProductImg">
+                <img src="../images2/편집_p-10-1.jpg" width="100%" id="ProductImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="/images2/편집_p-10-2.jpg"  width="100%" class="small-img">
+                        <img src="../images2/편집_p-10-2.jpg"  width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images2/편집_p-10-3.jpg" width="100%" class="small-img">
+                        <img src="../images2/편집_p-10-3.jpg" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images2/편집_p-10-4.jpg" width="100%" class="small-img">
+                        <img src="../images2/편집_p-10-4.jpg" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images2/편집_p-10-5.jpg" width="100%" class="small-img">
+                        <img src="../images2/편집_p-10-5.jpg" width="100%" class="small-img">
                     </div>
                 </div>
             </div>
@@ -57,8 +57,8 @@
                 <p> Home / Real estate</p>
                 <h2>Alia</h2>
                 <h4>₩9,395,131,110</h4>
-                <a href="/cart.html" class="btn">Add To Watchlist</a>
-                <a href="/contact.html" class="btn">Send Message</a>
+                <a href="../cart.html" class="btn">Add To Watchlist</a>
+                <a href="../contact.html" class="btn">Send Message</a>
                 </div>
                 <h3>Product Details <i class="fa-solid fa-indent"></i></h3>
                 <br>
@@ -99,8 +99,8 @@
     <div class="small-container">
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-11.html"><img src="/images2/수정됨_product-11.webp"></a>
-                <a href="/product/product-11.html"><h4>An Architectural Delight In The Innovation</h4></a>
+                <a href="./product-11.html"><img src="../images2/수정됨_product-11.webp"></a>
+                <a href="./product-11.html"><h4>An Architectural Delight In The Innovation</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -111,8 +111,8 @@
                 <p>₩9,046,169,097</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-12.html"><img src="/images2/수정됨_product-12.webp"></a>
-                <a href="/product/product-12.html"><h4>Namur I Castle Of Ostemerée</h4></a>
+                <a href="./product-12.html"><img src="../images2/수정됨_product-12.webp"></a>
+                <a href="./product-12.html"><h4>Namur I Castle Of Ostemerée</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -123,8 +123,8 @@
                 <p>₩7,381,888,729</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-13.html"><img src="/images2/수정됨_product-13.webp"></a>
-                <a href="/product/product-13.html"><h4>Lamborghini Sian</h4></a>
+                <a href="./product-13.html"><img src="../images2/수정됨_product-13.webp"></a>
+                <a href="./product-13.html"><h4>Lamborghini Sian</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -135,8 +135,8 @@
                 <p>₩4,866,246,195</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-14.html"><img src="/images2/수정됨_product-14.webp"></a>
-                <a href="/product/product-14.html"><h4>2019 Bugatti Chiron awd</h4></a>
+                <a href="./product-14.html"><img src="../images2/수정됨_product-14.webp"></a>
+                <a href="./product-14.html"><h4>2019 Bugatti Chiron awd</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -158,12 +158,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="../images/play-store.png">
+                        <img src="../images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images2/logo2.png">
+                    <img src="../images2/logo2.png">
                     <p>Hight Quality pictures, all the information you need, and a number to contact in case of interest. Also a very user-friendly and easy site to navigate.</p>
                 </div>
                 <div class="footer-col-3">
