--- a/product/product-22.html
+++ b/product/product-22.html
@@ -12,21 +12,21 @@
     <div class="container-logo">
         <div class="navbar">
             <div class="logo">
-                <a href="/index.html"><img src="/images2/logo3.png" width="180px" height="50px" alt="로고"></a>
+                <a href="../index.html"><img src="../images2/logo3.png" width="180px" height="50px" alt="로고"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="/allproduct/allproduct-1.html">All products</a></li>
-                    <li><a href="/real_estate/real_estate-1.html">Real Estate</a></li>
-                    <li><a href="/car/car-1.html">Cars</a></li>
-                    <li><a href="/yacht/yacht-1.html">Yachts</a></li>
-                    <li><a href="/jet/jet-1.html">Jets</a></li>
+                    <li><a href="../allproduct/allproduct-1.html">All products</a></li>
+                    <li><a href="../real_estate/real_estate-1.html">Real Estate</a></li>
+                    <li><a href="../car/car-1.html">Cars</a></li>
+                    <li><a href="../yacht/yacht-1.html">Yachts</a></li>
+                    <li><a href="../jet/jet-1.html">Jets</a></li>
                 </ul>
             </nav>
-            <a href="/contact.html" class="menu-r">Contact</a>
-            <a href="/account.html" class="menu-r">Account</a>
-            <a href="/cart.html"><img src="/images2/bookmark-regular.svg" width="40px" height="30px"></a>
-            <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <a href="../contact.html" class="menu-r">Contact</a>
+            <a href="../account.html" class="menu-r">Account</a>
+            <a href="../cart.html"><img src="../images2/bookmark-regular.svg" width="40px" height="30px"></a>
+            <img src="../images/menu.png" class="menu-icon" onclick="menutoggle()">
         </div>   
     </div>
 
@@ -35,20 +35,20 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="/images2/편집_p-22-1.jpg" width="100%" id="ProductImg">
+                <img src="../images2/편집_p-22-1.jpg" width="100%" id="ProductImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="/images2/편집_p-22-2.jpg"  width="100%" class="small-img">
+                        <img src="../images2/편집_p-22-2.jpg"  width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images2/편집_p-22-3.jpg" width="100%" class="small-img">
+                        <img src="../images2/편집_p-22-3.jpg" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images2/편집_p-22-4.jpg" width="100%" class="small-img">
+                        <img src="../images2/편집_p-22-4.jpg" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images2/편집_p-22-5.jpg" width="100%" class="small-img">
+                        <img src="../images2/편집_p-22-5.jpg" width="100%" class="small-img">
                     </div>
                 </div>
             </div>
@@ -57,8 +57,8 @@
                     <p> Home / Yacht</p>
                     <h2>G 500 164' 1" (50.00m) Dynamiq 2024</h2>
                     <h4>₩36,848,162,930</h4>
-                    <a href="/cart.html" class="btn">Add To Watchlist</a>
-                    <a href="/contact.html" class="btn">Send Message</a>
+                    <a href="../cart.html" class="btn">Add To Watchlist</a>
+                    <a href="../contact.html" class="btn">Send Message</a>
                     </div>
                     <h4>Yacht Details</h4><br>
                     <details>
@@ -145,8 +145,8 @@
     <div class="small-container">
         <div class="row">
             <div class="col-4">
-                <a href="/product/product-21.html"><img src="/images2/수정됨_product-21.webp"></a>
-                <a href="/product/product-21.html"><h4>Heesen 2017</h4></a>
+                <a href="./product-21.html"><img src="../images2/수정됨_product-21.webp"></a>
+                <a href="./product-21.html"><h4>Heesen 2017</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -157,8 +157,8 @@
                 <p>₩66,862,666,554</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-22.html"><img src="/images2/수정됨_product-22.webp"></a>
-                <a href="/product/product-22.html"><h4>G 500 164' 1" (50.00m) Dynamiq 2024</h4></a>
+                <a href="./product-22.html"><img src="../images2/수정됨_product-22.webp"></a>
+                <a href="./product-22.html"><h4>G 500 164' 1" (50.00m) Dynamiq 2024</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -169,8 +169,8 @@
                 <p>₩36,848,162,930</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-23.html"><img src="/images2/수정됨_product-23.webp"></a>
-                <a href="/product/product-23.html"><h4>Tecnomar for Lamborghini LY 63</h4></a>
+                <a href="./product-23.html"><img src="../images2/수정됨_product-23.webp"></a>
+                <a href="./product-23.html"><h4>Tecnomar for Lamborghini LY 63</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -181,8 +181,8 @@
                 <p>₩4,019,799,592</p>
             </div>
             <div class="col-4">
-                <a href="/product/product-24.html"><img src="/images2/수정됨_product-24.webp"></a>
-                <a href="/product/product-24.html"><h4>Navigator Sagittarius By Navigator</h4></a>
+                <a href="./product-24.html"><img src="../images2/수정됨_product-24.webp"></a>
+                <a href="./product-24.html"><h4>Navigator Sagittarius By Navigator</h4></a>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -204,12 +204,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="../images/play-store.png">
+                        <img src="../images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images2/logo2.png">
+                    <img src="../images2/logo2.png">
                     <p>Hight Quality pictures, all the information you need, and a number to contact in case of interest. Also a very user-friendly and easy site to navigate.</p>
                 </div>
                 <div class="footer-col-3">
